entity_macros/tests/ui/derive/ent/too-many-attr-inside-ent-attr.stderr
error: Too many items within ent(...)
  --> $DIR/too-many-attr-inside-ent-attr.rs:11:5
   |
11 |     #[ent(created, created)]
   |     ^
